2017-02-22  Edward Jones  <ed.jones@embecosm.com>

	* Driver.cpp: Don't allow both -fbranch-target-load-optimize and
	-fbranch-target-load-optimize2 to run.

2017-02-14  Edward Jones  <ed.jones@embecosm.com>

	* Driver.cpp: Remove some flags unavailable in gcc 4.5
	* Parameter.h: Likewise.

2017-02-14  Edward Jones  <ed.jones@embecosm.com>

	* Driver.cpp (main): Refactor. Always provide -O3 on the
	command line when both gathering and optimizing.

2017-01-25  Edward Jones  <ed.jones@embecosm.com>

	* Driver.cpp (main): Fix check of the command word to handle
	absolute paths.

2017-01-24  Edward Jones  <ed.jones@embecosm.com>

	* CMakeLists.txt: Add a symlink from mageec-gcc to mageec-g++ at
	install time.
	* Driver.cpp: Add the ability to specify a command to invokve g++
	from the GCC wrapper. Depending on whether the mageec-gcc,
	mageec-gfortran or mageec-g++ is called this will use the
	corresponding command -fmageec-g?? command from the command line.

2017-01-24  Edward Jones  <ed.jones@embecosm.com>

	* Driver.cpp: Convert input filenames to be absolute filenames for
	internal use.

2017-01-20  Edward Jones  <ed.jones@embecosm.com>

	* CMakeLists.txt: Add a symlink from mageec-gcc to
	mageec-fortran at install time.
	* Driver.cpp: Add the ability to specific a command to invoke
	gfortran from the GCC wrapper. When the driver is used, it will
	use the provided fortran compiler or c compiler depending on
	whether the driver is called through mageec-gcc or
	mageec-gfortran.
	(main): Refactor the argument handling to cope with fortran file,
	and input file provided mid-way through the command line string.

2017-01-20  Edward Jones  <ed.jones@embecosm.com>

	* Driver.cpp: Remove some unnecessary flags.
	* Parameters.h: Likewise.

2017-01-10  Edward Jones  <ed.jones@embecosm.com>

	* Driver.cpp: Compare feature file entries on the name of the
	program unit. Relax an overly aggressive warning to remove
	false positives.
