@@ -1,3 +1,7 @@
+2017-03-03  Edward Jones  <ed.jones@embecosm.com>
+
+	* Driver.cpp: Add -fmageec-sql-trace argument to the Driver.
+
 2017-02-22  Edward Jones  <ed.jones@embecosm.com>
 
 	* Driver.cpp: Don't allow both -fbranch-target-load-optimize and
